@@ -1,4 +1,5 @@
 1.5.23.dev0
+ * #394: Compact repository segments with new "borgmatic compact" action. Borg 1.2+ only.
  * #480, #482: Fix traceback when a YAML validation error occurs.
 
 1.5.22
